corretti link candidati sponsor e candidati speaker

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             <li><a class="" href="/location.html">Location</a></li-->
                         </ul>
                         <ul id="bottom-navlinks" class="bottom-navlinks visible-xs">
-                            <li><a href="/speaker.html" target="_blank">Candidati come speaker</a></li>
+                            <li><a href="https://goo.gl/forms/rZS5x76srlmyfJMh1" target="_blank">Candidati come speaker</a></li>
                         </ul>
-                        <a href="/speaker.html"
+                        <a href="https://goo.gl/forms/rZS5x76srlmyfJMh1"
                            class="right-nav-button right-nav-button-hidden btn btn-primary waves-effect waves-button waves-light waves-float pull-right hidden-xs hidden-sm"
                            target="_blank"> Candidati come speaker </a></nav>
                 </header>
@@ -84,10 +84,10 @@
                                 GDG <span id="typeout-text" class="hidden-xs"></span>
                                 <span class="typeout-fallback"></span></h1>
                             <p>Novembre, 2016</p>
-                            <a href="http://bit.ly/dfua-c4p"
+                            <a href="https://goo.gl/forms/rZS5x76srlmyfJMh1"
                                class="btn btn-primary waves-effect waves-button waves-light waves-float"
                                target="_blank">Candidati come Speaker</a>
-                            <a href="/#tickets"
+                            <a href="https://goo.gl/forms/ILCbxjjL7yJuBUlj2" target="_blank"
                                class="btn btn-primary waves-effect waves-button waves-light waves-float">Diventa Sponsor
                                 Devfest</a>
                         </div>
