--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
                             </li>
                         </ul>
                         <h3>Partners</h3>
+                        <h5>Con il pratocinio di:</h5>
+                        <ul class="list-inline">
+                            <a href="http://www.unimib.it/" target="_blank"
+                               class="btn btn-primary waves-effect waves-button waves-light waves-float">
+                                <img src="/img/unimi.jpg" alt="Università degli Studi Milano Bicocca">
+                            </a><br><br>
+                        </ul>
                         <h5>Sponsor</h5>
                         <ul class="list-inline">
                             <a href="/assets/GDG_DevFest_Partnership.pdf"
