fix estetico e ortografico

--- a/index.html
+++ b/index.html
@@ -230,10 +230,9 @@
                             </li>
                         </ul>
                         <h3>Partners</h3>
-                        <h5>Con il pratocinio di:</h5>
+                        <h5>Con il patrocinio di:</h5>
                         <ul class="list-inline">
-                            <a href="http://www.unimib.it/" target="_blank"
-                               class="btn btn-primary waves-effect waves-button waves-light waves-float">
+                            <a href="http://www.unimib.it/" target="_blank">
                                 <img src="/img/unimi.jpg" alt="Università degli Studi Milano Bicocca">
                             </a><br><br>
                         </ul>
