--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <h5>Con il patrocinio di:</h5>
                         <ul class="list-inline">
                             <a href="http://www.unimib.it/" target="_blank">
-                                <img src="/img/unimi.jpg" alt="Università degli Studi Milano Bicocca">
+                                <img src="/img/unimi.jpg" alt="Università degli Studi Milano Bicocca" style="width: 150px">
                             </a><br><br>
                         </ul>
                         <h5>Sponsor</h5>
