candida la tua azienda

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                         </ul>
                         <h5>Sponsor</h5>
                         <ul class="list-inline">
-                            <a href="/assets/GDG_DevFest_Partnership.pdf"
+                            <a href="https://goo.gl/forms/ILCbxjjL7yJuBUlj2" target="_blank"
                                class="btn btn-primary waves-effect waves-button waves-light waves-float">
-                                Partecipa come sponsor
+                                Stiamo cercando sponsor: candida la tua azienda!
                             </a><br><br><br>
                         </ul>
                     </div>
