--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 DevFest Nord Italia 2016<br>
                                 GDG <span id="typeout-text" class="hidden-xs"></span>
                                 <span class="typeout-fallback"></span></h1>
-                            <p>Novembre, 2016</p>
+                            <p>12 Novembre, 2016</p>
                             <a href="https://goo.gl/forms/rZS5x76srlmyfJMh1"
                                class="btn btn-primary waves-effect waves-button waves-light waves-float"
                                target="_blank">Candidati come Speaker</a>
