--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         <div class="row">
                             <div class="pull-left"><h3>Location</h3>
                                 <ul>
-                                    <li>Da definire</li>
-                                    <li>Milano</li>
+                                    <li>Università degli Studi<br>Milano Bicocca</li>
+                                    <li>Via Bicocca degli Arcimboldi, 8, Milano</li>
                                     <li>
                                         <a href="mailto:infodgdmi@gmail.com">infogdgmi@gmail.com</a></li>
                                     <li>
@@ -321,9 +321,9 @@
 <script>
     Waves.displayEffect();
 if ($(window).width() > 767) {
-    var googleMaps = 'index', eventPlace = new google.maps.LatLng(45.4627124,9.107693), centerMap = new google.maps.LatLng(45.4627124,9.107693), mobileCenterMap = new google.maps.LatLng(45.4627124,9.107693), icon = '';
+    var googleMaps = 'index', eventPlace = new google.maps.LatLng(45.517569,9.212770), centerMap = new google.maps.LatLng(45.517569,9.212770), mobileCenterMap = new google.maps.LatLng(45.517569,9.212770), icon = 'http://gdg-x.github.io/zeppelin/img/other/map-marker.png';
 } else {
-    var staticGoogleMaps = true, eventPlaceCoordinates = '45.4627124,9.107693', centerMapCoordinates = '45.4627124,9.107693', mobileCenterMapCoordinates = '45.4627124,9.107693', icon = 'http://gdg-x.github.io/zeppelin/img/other/map-marker.png';
+    var staticGoogleMaps = true, eventPlaceCoordinates = '45.517569,9.212770', centerMapCoordinates = '45.517569,9.212770', mobileCenterMapCoordinates = '45.517569,9.212770', icon = 'http://gdg-x.github.io/zeppelin/img/other/map-marker.png';
 }
 $(document).ready(function () {
     $(function () {
