--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="/logistics/#find-way" class="pull-right">
+                            <a href="https://www.google.it/maps/place/U7+-+Universit%C3%A0+degli+Studi+di+Milano-Bicocca/@45.5214331,9.2135905,17z/data=!4m5!3m4!1s0x0:0x57e9ff45dc8331de!8m2!3d45.5175398!4d9.2129803" class="pull-right" target="_blank">
                                 <svg class="icon icon-direction" viewBox="0 0 32 32">
                                     <use xlink:href="/img/sprites/sprites.svg#icon-direction"></use>
                                 </svg>
