sharing image facebook and twitter ok

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="description" content="GDG DevFest Nord Italia 2016">
     <meta name="keywords" content="event, gdg, devfest, google, programming, android, chrome, developers, milano">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@DevFest">
-    <meta name="twitter:title" content="GDG DevFest Season 2014">
-    <meta name="twitter:description" content="GDG DevFest is a set of events all around the world">
-    <meta name="twitter:image:src" content="http://gdg-x.github.io/zeppelin/img/seo/sharing-twitter.png">
+    <meta name="twitter:site" content="@gdgmilano">
+    <meta name="twitter:title" content="GDG DevFest Nord Italia 2016">
+    <meta name="twitter:description" content="La DevFest è l’evento GDG più importante dell’anno, è prima di tutto una festa, un momento di ritrovo per gli sviluppatori.">
+    <meta name="twitter:image:src" content="http://devfest2016.gdgmilano.org/img/sharing-twitter.png">
     <!-- Social: Facebook / Open Graph -->
-    <meta property="og:title" content="GDG DevFest Season 2014"/>
-    <meta property="og:site_name" content="GDG DevFest Season 2014"/>
+    <meta property="og:title" content="GDG DevFest Nord Italia 2016"/>
+    <meta property="og:site_name" content="GDG DevFest Nord Italia 2016"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://gdg-x.github.io"/>
-    <meta property="og:image" content="http://gdg-x.github.io/zeppelin/img/seo/sharing-facebook.png"/>
-    <meta property="og:description" content="GDG DevFest is a set of events all around the world"/>
+    <meta property="og:url" content="http://devfest2016.gdgmilano.org"/>
+    <meta property="og:image" content="http://devfest2016.gdgmilano.org/img/sharing-facebook.png"/>
+    <meta property="og:description" content="La DevFest è l’evento GDG più importante dell’anno, è prima di tutto una festa, un momento di ritrovo per gli sviluppatori, i professionisti dell’informatica, gli studenti e i tech enthusiast in generale."/>
     <title>GDG DevFest Nord Italia 2016</title>
     <link rel="shortcut icon" href="/img/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/apple-touch-icon-152x152.png">
@@ -64,6 +64,7 @@
                         <div class="logo-navbar logo logo-dark visible-xs"></div>
                         <ul>
                             <li><a class="current" href="/index.html">Home</a></li>
+                            <li><a href="http://www.gdgmilano.org" target="_blank">GDG Milano</a></li>
                             <!--li><a class="" href="/programma.html">Programma</a></li>
                             <li><a class="" href="/speaker.html">Speakers</a></li>
                             <li><a class="" href="/sponsor.html">Sponsor</a></li>
@@ -150,7 +151,7 @@
                         <div class="clearfix visible-xs"></div>
                         <div class="col-md-3 col-xs-6">
                             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="1000">
-                                <div class="stat"><span class="timer" data-from="0" data-to="20">9</span></div>
+                                <div class="stat"><span class="timer" data-from="0" data-to="12">12</span></div>
                                 <div class="stat-info">speaker</div>
                                 <hr>
                                 <p class="small">per diversi ambiti</p></div>
@@ -208,22 +209,22 @@
                         <h5>Co-organizzatori</h5>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" target="_blank">
+                                <a href="http://www.gdgbrescia.it/" target="_blank">
                                     <img src="/img/loghi/logo-gdg-brescia.png" title="GDG Brescia" alt="GDG Brescia">
                                 </a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">
+                                <a href="http://gdgbologna.com/" target="_blank">
                                     <img src="/img/loghi/logo-gdg-bologna.png" title="GDG Bologna" alt="GDG Bologna">
                                 </a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">
+                                <a href="http://genova.gdg.io/" target="_blank">
                                     <img src="/img/loghi/logo-gdg-genova.png" title="GDG Genova" alt="GDG Genova">
                                 </a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">
+                                <a href="https://www.facebook.com/gdgreggioemilia/" target="_blank">
                                     <img src="/img/loghi/logo-gdg-reggioemilia.png" title="GDG Reggio Emilia"
                                          alt="GDG Reggio Emilia">
                                 </a>
@@ -238,6 +239,9 @@
                         </ul>
                         <h5>Sponsor</h5>
                         <ul class="list-inline">
+                            <a href="https://www.jetbrains.com/" target="_blank">
+                                <img src="/img/logo_JetBrains_4.png" alt="Jetbrains Logo" style="width: 200px">
+                            </a><br><br>
                             <a href="https://goo.gl/forms/ILCbxjjL7yJuBUlj2" target="_blank"
                                class="btn btn-primary waves-effect waves-button waves-light waves-float">
                                 Stiamo cercando sponsor: candida la tua azienda!
