--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="http://gdgtorino.com/" target="_blank">
+                                    <img src="/img/loghi/logo-gdg-torino.png" title="GDG Torino" alt="GDG Torino">
+                                </a>
+                            </li>
+                            <li>
                                 <a href="http://genova.gdg.io/" target="_blank">
                                     <img src="/img/loghi/logo-gdg-genova.png" title="GDG Genova" alt="GDG Genova">
                                 </a>
@@ -333,7 +338,7 @@ $(document).ready(function () {
     $(function () {
         if ($(window).width() > 767) {
             $("#typeout-text").typed({
-                strings: ["Milano", "Brescia", "Genova", "Bologna", "Reggio Emilia"],
+                strings: ["Milano", "Brescia", "Genova", "Bologna", "Reggio Emilia", "Torino"],
                 typeSpeed: 150,
                 backDelay: 900,
                 loop: true
