GDG Torino logo Modifiche ai pulsanti e dati 200partecipanti...

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                         <ul id="bottom-navlinks" class="bottom-navlinks visible-xs">
                             <li><a href="https://goo.gl/forms/rZS5x76srlmyfJMh1" target="_blank">Candidati come speaker</a></li>
                         </ul>
-                        <a href="https://goo.gl/forms/rZS5x76srlmyfJMh1"
+                        <a href="http://www.eventbrite.it/e/biglietti-devfest-nord-italia-2016-27905616450"
                            class="right-nav-button right-nav-button-hidden btn btn-primary waves-effect waves-button waves-light waves-float pull-right hidden-xs hidden-sm"
-                           target="_blank"> Candidati come speaker </a></nav>
+                           target="_blank"> Registrati e partecipa </a></nav>
                 </header>
                 <div class="content-wrapper">
                     <div class="jumbotron">
@@ -85,12 +85,10 @@
                                 GDG <span id="typeout-text" class="hidden-xs"></span>
                                 <span class="typeout-fallback"></span></h1>
                             <p>12 Novembre, 2016</p>
-                            <a href="https://goo.gl/forms/rZS5x76srlmyfJMh1"
-                               class="btn btn-primary waves-effect waves-button waves-light waves-float"
-                               target="_blank">Candidati come Speaker</a>
-                            <a href="https://goo.gl/forms/ILCbxjjL7yJuBUlj2" target="_blank"
-                               class="btn btn-primary waves-effect waves-button waves-light waves-float">Diventa Sponsor
-                                Devfest</a>
+                            <a href="http://www.eventbrite.it/e/biglietti-devfest-nord-italia-2016-27905616450" target="_blank"
+                               class="btn btn-primary waves-effect waves-button waves-light waves-float">
+                                Registrati e partecipa all'evento
+                            </a>
                         </div>
                     </div>
                     <a href="#about" class="explore">
@@ -116,7 +114,7 @@
                             </div>
                             <div class="col-md-4 col-xs-6">
                                 <div class="animated hiding" data-animation="fadeInDown" data-delay="500">
-                                    <h5>Workshop</h5>
+                                    <h5>Codelab</h5>
                                     <img class="img-circle" src="/img/about-section/workshop.jpg"
                                          height="128" width="128" alt="Workshops">
                                     <p>
@@ -136,14 +134,14 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="col-md-3 col-xs-6">
                             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="0">
-                                <div class="stat"><span class="timer" data-from="0" data-to="350">350</span>+</div>
+                                <div class="stat"><span class="timer" data-from="0" data-to="200">200</span>+</div>
                                 <div class="stat-info">partecipanti</div>
                                 <hr>
                                 <p class="small">da tutto il Nord Italia</p></div>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="500">
-                                <div class="stat"><span class="timer" data-from="0" data-to="8">8</span></div>
+                                <div class="stat"><span class="timer" data-from="0" data-to="6">6</span></div>
                                 <div class="stat-info">ore</div>
                                 <hr>
                                 <p class="small">di tecnologia Google</p></div>
@@ -151,7 +149,7 @@
                         <div class="clearfix visible-xs"></div>
                         <div class="col-md-3 col-xs-6">
                             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="1000">
-                                <div class="stat"><span class="timer" data-from="0" data-to="12">12</span></div>
+                                <div class="stat"><span class="timer" data-from="0" data-to="10">10</span></div>
                                 <div class="stat-info">speaker</div>
                                 <hr>
                                 <p class="small">per diversi ambiti</p></div>
