--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
                         <ul>
                             <li><a class="current" href="/index.html">Home</a></li>
                             <li><a href="http://www.gdgmilano.org" target="_blank">GDG Milano</a></li>
-                            <!--li><a class="" href="/programma.html">Programma</a></li>
-                            <li><a class="" href="/speaker.html">Speakers</a></li>
-                            <li><a class="" href="/sponsor.html">Sponsor</a></li>
-                            <li><a class="" href="/location.html">Location</a></li-->
+                            <li><a class="" href="/programma.html">Programma</a></li>
                         </ul>
                         <ul id="bottom-navlinks" class="bottom-navlinks visible-xs">
                             <li><a href="https://goo.gl/forms/rZS5x76srlmyfJMh1" target="_blank">Candidati come speaker</a></li>
