--- a/index.html
+++ b/index.html
@@ -240,12 +240,9 @@
                         <h5>Sponsor</h5>
                         <ul class="list-inline">
                             <a href="https://www.jetbrains.com/" target="_blank">
-                                <img src="/img/logo_JetBrains_4.png" alt="Jetbrains Logo" style="width: 200px">
+                                <img src="/img/logo_JetBrains_4.png" alt="Jetbrains Logo" style="width: 250px">
+                                <img src="/img/redbull.png" alt="Jetbrains Logo" style="width: 100px">
                             </a><br><br>
-                            <a href="https://goo.gl/forms/ILCbxjjL7yJuBUlj2" target="_blank"
-                               class="btn btn-primary waves-effect waves-button waves-light waves-float">
-                                Stiamo cercando sponsor: candida la tua azienda!
-                            </a><br><br><br>
                         </ul>
                     </div>
                 </div>
