--- a/programma.html
+++ b/programma.html
@@ -135,7 +135,7 @@
                                 <div class="slot-content">
                                     <h5 class="slot-title" itemprop="name">Presentazione Giornata</h5>
                                     <p class="service-description">
-                                        Keynote suelle attività dei GDG in Italia, presentazione dei gruppi che
+                                        Keynote sulle attività dei GDG in Italia, presentazione dei gruppi che
                                         hanno collaborato alla realizzazione della giornata.
                                     </p>
                                 </div>
