fix lingua intervento

--- a/programma.html
+++ b/programma.html
@@ -235,7 +235,7 @@
                                 <div class="slot-content" style="border-right-color: #03a9f4">
                                     <h5 class="slot-title" itemprop="name">
                                         Web/Bot:<br> Come migliorare il tuo chatbot: Design e persona
-                                    </h5> <span class="slot-language">EN</span>
+                                    </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
