fix lingua intervento, programma Azzurra e orari in html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                             <li><a class="" href="/programma.html">Programma</a></li>
                         </ul>
                         <ul id="bottom-navlinks" class="bottom-navlinks visible-xs">
-                            <li><a href="https://goo.gl/forms/rZS5x76srlmyfJMh1" target="_blank">Candidati come speaker</a></li>
+                            <li>
+                                <a href="http://www.eventbrite.it/e/biglietti-devfest-nord-italia-2016-27905616450"
+                                   class="right-nav-button right-nav-button-hidden btn btn-primary waves-effect waves-button waves-light waves-float pull-right hidden-xs hidden-sm"
+                                   target="_blank"> Registrati e partecipa </a>
+                            </li>
                         </ul>
                         <a href="http://www.eventbrite.it/e/biglietti-devfest-nord-italia-2016-27905616450"
                            class="right-nav-button right-nav-button-hidden btn btn-primary waves-effect waves-button waves-light waves-float pull-right hidden-xs hidden-sm"
