cambio titolo Talk Ragone

--- a/programma.html
+++ b/programma.html
@@ -303,7 +303,7 @@
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
                                         Diversity:<br>
-                                        Why diversity is the key of the success of your team
+                                        Why diversity... team
                                     </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
