--- a/programma.html
+++ b/programma.html
@@ -160,13 +160,14 @@
                                 <div class="color-line" style="background: #90be4e"></div>
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
-                                        Android:<br>the Firebase tier for your app
+                                        Diversity:<br>
+                                        Why diversity... team
                                     </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
-                                                Matteo Bonifazi
-                                                <span class="speaker-position">GDE - Google Developer Expert</span>
+                                                Azzurra Ragone
+                                                <span class="speaker-position">WTM - Women Techmakers lead</span>
                                             </p>
                                         </li>
                                     </ul>
@@ -194,17 +195,8 @@
                                 <div class="color-line" style="background: #e91e63"></div>
                                 <div class="slot-content" style="border-right-color: #e91e63">
                                     <h5 class="slot-title" itemprop="name">
-                                        Codelab:<br>Introduzione al Go backend development (Parte 1)
+                                        &nbsp;
                                     </h5>
-                                    <span class="slot-language">IT</span>
-                                    <ul class="slot-speakers">
-                                        <li itemprop="performer">
-                                            <p class="speaker-name">
-                                                Danilo Cianfrone
-                                                <span class="speaker-position">GDG Pisa</span>
-                                            </p>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -302,14 +294,13 @@
                                 <div class="color-line" style="background: #90be4e"></div>
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
-                                        Diversity:<br>
-                                        Why diversity... team
+                                        Android:<br>Android MVP architecture: guida di sopravvivenza
                                     </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
-                                                Azzurra Ragone
-                                                <span class="speaker-position">WTM - Women Techmakers lead</span>
+                                                Wilfried Mbouenda Mbogne
+                                                <span class="speaker-position">GDG Torino</span>
                                             </p>
                                         </li>
                                     </ul>
@@ -365,13 +356,13 @@
                                 <div class="color-line" style="background: #90be4e"></div>
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
-                                        Android:<br>Android MVP architecture: guida di sopravvivenza
+                                        Android:<br>the Firebase tier for your app
                                     </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
-                                                Wilfried Mbouenda Mbogne
-                                                <span class="speaker-position">GDG Torino</span>
+                                                Matteo Bonifazi
+                                                <span class="speaker-position">GDE - Google Developer Expert</span>
                                             </p>
                                         </li>
                                     </ul>
