cambio nome talk azzurra

--- a/programma.html
+++ b/programma.html
@@ -160,8 +160,7 @@
                                 <div class="color-line" style="background: #90be4e"></div>
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
-                                        Diversity:<br>
-                                        Why diversity... team
+                                        Diversity: Why diversity is the key of the success of your team
                                     </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
