--- a/programma.html
+++ b/programma.html
@@ -360,7 +360,7 @@
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
-                                                Matteo Bonifazi
+                                                Roberto Orgiu
                                                 <span class="speaker-position">GDE - Google Developer Expert</span>
                                             </p>
                                         </li>
