cambio orgiu nome talk

--- a/programma.html
+++ b/programma.html
@@ -213,7 +213,7 @@
                                 <div class="color-line" style="background: #90be4e"></div>
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
-                                        Android:<br>DI 101 with Dagger 2
+                                        Android:<br>Injecting Dependencies with Dagger 2
                                     </h5> <span class="slot-language">EN</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
@@ -415,7 +415,7 @@
                                 <div class="slot col-md-12 col-xs-12 service-slot flexbox-item-height"
                                      data-slot-detail="Hall">
                                     <div class="color-line"></div>
-                                    <div class="slot-content"><h5 class="slot-title" itemprop="name">Chiusura Gioranta</h5>
+                                    <div class="slot-content"><h5 class="slot-title" itemprop="name">Chiusura Giornata</h5>
                                         <p class="service-description">Ringraziamenti ed estrazione gadget</p>
                                     </div>
                                 </div>
