--- a/programma.html
+++ b/programma.html
@@ -247,17 +247,8 @@
                                 <div class="color-line" style="background: #e91e63"></div>
                                 <div class="slot-content" style="border-right-color: #e91e63">
                                     <h5 class="slot-title" itemprop="name">
-                                        Codelab:<br>Introduzione al Go backend development (Parte 2)
+                                        &nbsp;
                                     </h5>
-                                    <span class="slot-language">IT</span>
-                                    <ul class="slot-speakers">
-                                        <li itemprop="performer">
-                                            <p class="speaker-name">
-                                                Danilo Cianfrone
-                                                <span class="speaker-position">GDG Pisa</span>
-                                            </p>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
