--- a/programma.html
+++ b/programma.html
@@ -214,7 +214,7 @@
                                 <div class="slot-content" style="border-right-color: #90be4e">
                                     <h5 class="slot-title" itemprop="name">
                                         Android:<br>Injecting Dependencies with Dagger 2
-                                    </h5> <span class="slot-language">EN</span>
+                                    </h5> <span class="slot-language">IT</span>
                                     <ul class="slot-speakers">
                                         <li itemprop="performer">
                                             <p class="speaker-name">
